Just  made some changes to the files

--- a/client/src/sass/components/_card.scss
+++ b/client/src/sass/components/_card.scss
@@ -81,7 +81,7 @@
         font-weight: 300;
         text-transform: uppercase;
         text-align: right;
-        color: $color-white;
+        color: #FCFCFC;
         position: absolute;
         top: 12rem;
         right: 2rem;
