--- a/client/src/sass/layout/_navigation.scss
+++ b/client/src/sass/layout/_navigation.scss
@@ -163,3 +163,69 @@
         transform: rotate(-135deg);
     }
 }
+
+.nav-bar {
+    width: 100%;
+    height: 60px;
+    background: transparent;
+}
+.nav-list {
+    display: flex;
+    margin : 0;
+    padding: 0 100px;
+    float: right;
+}
+.nav-items {
+    list-style: none;
+
+}
+.nav-link {
+    display: block;
+    color : $color-white;
+
+}
+.logo-box{
+    position: absolute;
+    top : -25px;
+    left: -300px;
+    
+ }
+ .logo {
+   height: 80px;
+   width: 100%;
+ 
+ }
+ .logo:hover {
+   animation: moveInRight 1s ease-out;
+ }
+ 
+ .nav-list {
+    position: relative;
+     left: 250px;
+ }
+ .nav-items {
+     position: relative;
+     left: 30px;
+    padding-left: 60px;
+
+ }
+ .nav-links {
+     text-decoration: none;
+     font-size: 2.0rem;
+     color: #fff;
+     display: inline-block;
+
+ }
+ .nav-links::after {
+     content : '';
+     display: block;
+     width : 0;
+     height: 2px;
+     background-color: #fff;
+     transition: width .3s;
+
+ }
+ .nav-links:hover::after {
+     width: 100%;
+     transition: width .3s;
+ }
