--- a/client/src/sass/pages/_home.scss
+++ b/client/src/sass/pages/_home.scss
@@ -50,8 +50,9 @@
 }
 
 .section-book {
-    padding: 15rem 0;
+    padding: 5rem 10rem;
     background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark);
+    
 
     @include respond(tab-port) {
         padding: 10rem 0;
@@ -67,6 +68,7 @@
     background-size: 100%;
     border-radius: 3px;
     box-shadow: 0 1.5rem 4rem rgba($color-black, .2);
+    height: 15px;
 
     @include respond(tab-land) {
         background-image: linear-gradient(105deg, 
@@ -95,5 +97,24 @@ url(../../img/bloodbank.jpg);
         @include respond(tab-port) {
             width: 100%;
         }
+    }
+}
+
+.signup {
+    background-image: linear-gradient(105deg, 
+                                    rgba($color-white, .9) 0%,
+                                    rgba($color-white, .9) 50%,
+                                    transparent 50%) ,
+                            url(../../img/landing2.jpg);
+    background-size: 100%;
+    border-radius: 3px;
+    box-shadow: 0 1.5rem 4rem rgba($color-black, .2);
+    height: 400px;
+
+    @include respond(tab-land) {
+        background-image: linear-gradient(105deg, 
+        rgba($color-white, .9) 0%,
+        rgba($color-white, .9) 65%,
+        transparent 65%) ,
     }
 }
