--- a/client/src/sass/dashboard/_component.scss
+++ b/client/src/sass/dashboard/_component.scss
@@ -300,15 +300,19 @@
     color: rgb(73, 250, 102);
     text-align: center;
     text-decoration: none;
-    font-weight: 900;
+    font-weight: 400;
     font-family: Arial, Helvetica, sans-serif;
+    line-height: 1.7;
 
 
 }
 .dashboard {
-    border: 4px solid black;
-    height: 300px;
+    border: 1px solid black;
+    margin-left: 21%;
+    height: 356px;
+    width: 78%;
     margin-top: 50px;
+    background-color: white !important;
 }
 .profile-welcome {
     
@@ -363,7 +367,7 @@
     left: 1200px;
 }
 .dashboard-background {
-   height: 350px;
+   height: 400px;
    display: flex;
    justify-content: flex-end;
    position: absolute;
@@ -393,3 +397,178 @@
 .quick-action-donate {
     padding: 100px;
 }
+
+
+
+/////DONATE FORM ////////
+.donate-form-wrapper {
+    background-color: rgba(193, 15, 15, 0.5);
+    width: 100%;
+    height: 1000px;
+}
+.donation-talk {
+    position: absolute;
+    top: 50px;
+    right: 200px;
+}
+.donation-talk-title {
+    font-size: 40px;
+    color: #fff;
+    font-family: Arial, Helvetica, sans-serif;
+    padding-bottom: 15px;
+    
+}
+.donation-talk-subtitle {
+    font-size: 18px;
+    color: white;
+    padding: 1px;
+    text-justify: auto;
+    letter-spacing: 1.7;
+    font-weight:400;
+}
+.donation-talk-subtitle-2 {
+    font-size: 25px;
+    background-color: rgb(228, 4, 4);
+    color: #fff;
+    padding: 1px;
+    text-justify: auto;
+    letter-spacing: 1.7;
+    margin-top: 15px;
+    text-align: center;
+
+    padding-left: 10px;
+    font-weight: 600;
+}
+.donation-talk-subtitle-3 {
+    font-size: 30px;
+    color: white;
+    margin-top: 20px;
+    padding: 1px;
+    text-justify: auto;
+    letter-spacing: 1.7;
+    font-weight:400;
+    text-align: center;
+}
+.donate-form {
+    width: 40%;
+    height: 500px;
+    position: absolute;
+    right: 200px;
+    top: 400px;
+
+
+}
+
+/////////SEARCH///
+
+
+
+.staggered-list-content {
+    width: 400px;
+    margin: 2rem auto;
+  }
+  .list {
+    list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    padding: 0;
+  }
+  .list li {
+    width: 100%;
+  }
+  .list li + li {
+    margin-top: 1rem;
+  }
+  .listItem {
+    width: 100%;
+    cursor: pointer;
+    background-color: #d0d0d0;
+    overflow: hidden;
+  }
+  .listItemContent {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 1rem;
+  }
+  .avatar {
+    width: 4rem;
+    height: 4rem;
+    border-radius: 100px;
+    background-color: grey;
+    margin-right: 2rem;
+  }
+  .avatarExpanded {
+    width: 8rem;
+    height: 8rem;
+    margin-right: 0;
+    margin-bottom: 1rem;
+  }
+  .description > div {
+    background-color: grey;
+    width: 14rem;
+    border-radius: 6px;
+    height: 0.5rem;
+  }
+  .description > div:nth-of-type(2) {
+    width: 11rem;
+  }
+  .description > div:nth-of-type(3) {
+    width: 8rem;
+  }
+  .description > div + div {
+    margin-top: 1rem;
+  }
+  .expandedListItem .description {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
+  .expandedListItem {
+    cursor: pointer;
+    background-color: #d0d0d0;
+  }
+  .expandedListItemContent {
+    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .additional-content {
+    width: 100%;
+    margin-top: 2rem;
+  }
+  
+  .additional-content > div {
+    opacity: 0;
+    border-radius: 3px;
+    background-color: lightgray;
+    height: 5rem;
+  }
+  
+  /* content fade in animations */
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+      transform: translateY(20px);
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+  
+  .animated-in .additional-content > div {
+    animation: fadeIn 0.4s forwards;
+  }
+  
+  .additional-content > div:nth-of-type(2) {
+    animation-delay: 0.15s;
+  }
+  .additional-content > div:nth-of-type(3) {
+    animation-delay: 0.3s;
+  }
+  .additional-content > div + div {
+    margin-top: 1rem;
+  }
+  
