Implement check health status

--- a/client/src/sass/pages/_home.scss
+++ b/client/src/sass/pages/_home.scss
@@ -75,7 +75,7 @@
         rgba($color-white, .9) 0%,
         rgba($color-white, .9) 65%,
         transparent 65%) ,
-url(../../img/hospital.jpg);
+url(./img/hospital.jpg);
         background-size: cover;
     }
 
