--- a/client/src/sass/dashboard/_component.scss
+++ b/client/src/sass/dashboard/_component.scss
@@ -303,16 +303,18 @@
     font-weight: 400;
     font-family: Arial, Helvetica, sans-serif;
     line-height: 1.7;
+     
 
 
 }
 .dashboard {
     border: 1px solid black;
-    margin-left: 21%;
     height: 356px;
     width: 78%;
     margin-top: 50px;
     background-color: white !important;
+    position: absolute;
+    left: 10px;
 }
 .profile-welcome {
     
@@ -324,7 +326,7 @@
 
     position: absolute;
     top: 60px;
-    left: 900px;
+    left: 600px;
 
 }
 .quick-action-wrappper {
@@ -572,3 +574,109 @@
     margin-top: 1rem;
   }
   
+
+
+  ///PROFILE ///
+  .main-profile-wrapper {
+      width: 100%;
+     display: flex;
+    //   flex-direction: row;
+    //   justify-content: flex-start;
+    //   align-items: flex-start;
+  }
+  .profile-sidebar {
+       
+      position: absolute;
+      right: 200px;
+      
+    
+  }
+
+  .profile-details-wrapper {
+      flex-grow: 3;
+  }
+  .profile-header {
+      font-size: 30px;
+      font-weight: 600;
+      color: #2E332E;
+      margin-top: 5px;
+  }
+  .profile-picture-container {
+    height: 1000px;
+    position: absolute;
+    left: 400px;
+  }
+  .profile-details {
+      margin-top: 30px;
+     padding-top: 15px;
+     height: 450px;
+      width: 400px;
+      border: 2px solid #2E332E;
+      border-radius: 9px;
+      overflow: hidden;
+  }
+  .profile-wrapper {
+
+  }
+  .profile-details-container {
+
+  }
+  .user-logo {
+      width: 220px;
+      height: 220px;
+      background-image: url(../img/logo.png);
+  }
+  .user-logo-svg {
+      position: absolute;
+      right: 10px;
+      top: 90px;
+      background-size: cover;
+     
+  }
+  .user-info-container {
+      width: 700px;
+      height: 500px;
+      position: absolute;
+      top:50px;
+      left: -350px;
+      padding: 20px;
+      border: 2px solid black;
+
+  }
+  .user-profile {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+      align-items: flex-end;
+      position: fixed;
+      right: 200px;
+      top: 200px;
+      text-align: center;
+       
+
+  }
+  .profile-details-form {
+      font-size: 20px;
+      padding-right: 20px;
+      text-align: center;
+      
+  }
+  .profile-settings {
+      font-size: 20px;
+      padding-right: 20px;
+  }
+  .profile-security{
+      font-size: 20px;
+  }
+  .user-profile-wrapper {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      position: absolute;
+      left: 100px;
+  }
+  @media (min-width: 1200px) {
+    .container{
+        max-width: 1750px;
+    }
+}
