--- a/client/src/sass/dashboard/_layout.scss
+++ b/client/src/sass/dashboard/_layout.scss
@@ -17,7 +17,7 @@
 }
 .sidebar{
  background-color: rgb(46, 51, 46);
- flex: 0 0 18%; 
+ flex: 0.2; 
  height: 100%;
  position: fixed;
  display: flex;
@@ -26,18 +26,14 @@
  align-items: flex-end;
 
 }
-.main-content{
- background-color: #EDF2F7;
- flex: 1;
- height: 1000px;
- width: 50%;
-}
-
-// .dashboard-container{
-//     max-width: 150rem;
-//     margin: .5rem auto;
-    
-//     box-shadow: 0 2rem 6rem (0,0,0,.3);
-
-//     min-height: 70rem;
+// .main-content{
+//  background-color: #EDF2F7;
+//  flex: 0.8;
+//  height: 1000px;
+//  width: 50%;
+//  z-index: -30;
 // }
+
+.dashboard-container{
+   display: flex;
+}
