--- a/client/src/sass/dashboard/_component.scss
+++ b/client/src/sass/dashboard/_component.scss
@@ -770,11 +770,14 @@
       
   }
   .blood-search-title {
-      font-size: 40px;
-      font-weight: 900;
+      font-size: 30px;
+      font-weight: 600;
       text-align: center;
-      color: black;
+      color: #fff;
       padding-top: 30px;
+      text-align: center;
+      position: relative;
+      left: 700px;
   }
 
 .result-container{
@@ -836,7 +839,63 @@
    
 
 }
+.search-wrapper {
+    display: flex;
+    flex: 1;
+    background-color: #E08686;
+    height: 100vh;
+}
+.search-total {
+    font-size: 20px;
+    color: #000;
 
+}
+.search-total > span {
+    font-weight: 600;
+    color: #000;
+    position: absolute;
+    top: 200px;
+}
+.users-bloodgroup {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 180px;
+    font-size: 18px;
+    background-color: #fff;
+    border-radius: 20px;
+    height: 75vh;
+    width: 90%;
+    max-width: 1000px;
+    min-width: 200px;
+}
+.users-table {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-left: 100px;
+   
+    font-size: 24px;
+    color: #000;
+    width: 50%;
+}
+.bloodgroup-header {
+    font-size: 24px;
+    color: #000;
+}
+.bloodgroup-list {
+    text-decoration: none;
+    color: #283747;
+    font-weight: 500;
+    list-style-type: none;
+    padding: 3px;
+  
+}
+.table-data {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
   @media (min-width: 1200px) {
     .container{
         max-width: 1750px;
